--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "angular-modal-gallery": "^5.2.2",
     "angular2-lightbox": "^1.3.0",
     "angularfire2": "^5.0.0-rc.6",
+    "animate.css": "^3.6.1",
+    "aos": "^2.2.0",
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "firebase": "^4.10.1",
